jsapp/js/components/common/koboTagsInput.scss
@use 'scss/colors';

/*
Note: these styles include bunch of overrides, because we have these horrible
styles in our codebase: `.form-modal__item input[type="text"]` in few different
placese. As soon as these are removed, we can simplify this file.
*/

.react-tagsinput {
  border: 1px solid colors.$kobo-gray-300;
  border-radius: 8px;
  padding: 8px 8px 4px;

  // Instead of indicating focus by default way (i.e. the input element being
  // highlighted), we highlight the wrapper.
  &:focus-within {
    outline: 1px solid colors.$kobo-blue;
  }

  &.react-tagsinput-invalid {
    .react-tagsinput-input {
      color: colors.$kobo-red;
      border-bottom-color: colors.$kobo-mid-red;
    }
  }
}

.react-tagsinput-tag {
  color: colors.$kobo-gray-800;
  background-color: colors.$kobo-gray-300;
  font-weight: 400;
  margin-bottom: 4px;
  margin-right: 4px;
  padding: 4px 8px 4px 10px;
  display: inline-block;
  border-radius: 4px;
}

/* a.k-tagsinput-remove */
.react-tagsinput-remove {
  cursor: pointer;
  color: inherit !important;
  opacity: 0.6;
  margin-inline-start: 6px;
  vertical-align: middle;
  font-size: 20px;

  &::after {
    content: '\00D7';
  }

  &:hover {
    opacity: 0.9;
  }
}

// We need to increase specificity here to fight rogue styles for inputs
.react-tagsinput input[type].react-tagsinput-input {
  background: transparent;
  border: 0 none;
  color: colors.$kobo-gray-700;
  font-family: sans-serif;
  font-weight: 400;
  margin-top: 2px;
  margin-bottom: 4px;
  margin-left: 4px;
  outline: none;
  padding: 0;
  min-width: 90px;

  &::placeholder {
    color: colors.$kobo-gray-600;
    opacity: 1;
  }

  // Disable default focus styles in favor of highlighting the wrapper
  &:focus-visible {
    outline: none;
  }
}

.react-tags-save-button {
  float: left;
}

